# sw_test

./: CMakeLists.txt  README.md  commands_example.txt
src/: EventLog.hpp  Server.cpp  Server.hpp  main.cpp  makefile
src/Logic/: Attack.cpp  Attack.hpp  Coord.cpp  Coord.hpp  Map.cpp  Map.hpp  Unit.cpp  Unit.hpp
src/Logic/Events/: Event.hpp  Events.hpp  MapCreated.hpp  MarchEnded.hpp  MarchStarted.hpp  UnitAttacked.hpp  UnitDied.hpp  UnitMoved.hpp  UnitSpawned.hpp
test/: CMakeLists.txt  makefile
test/src/: MapTest.cpp  ServerTest.cpp
